--- a/VidmeDeepDark.css
+++ b/VidmeDeepDark.css
@@ -2,7 +2,7 @@
 
 @-moz-document domain("vid.me") {
 /*Theme made by RaitaroH @https://github.com/RaitaroH/Vidme-DeepDark*/
-/*1.0.2*/
+/*1.0.3*/
 	
   /*Main color variables*/
 	:root
@@ -304,14 +304,14 @@
 	
 	
 	/*Subscribe*/
-	#user_view .user_header .user_actions a.user_subscribe, #user_view .gutter .levels .level_button > a, #subscriptions_levels_view .levels .level_button > a
+	#user_view .user_header .user_actions a.user_subscribe, #user_view .gutter .levels .level_button > a, #subscriptions_levels_view .levels .level_button > a, #video_view .video_subscribe .btn
 	{
 		background: transparent !important;
 		border: 1px solid var(--main-color) !important;
 		color: var(--main-color) !important;
 		opacity: .9;
 	}
-	#user_view .user_header .user_actions a.user_subscribe:hover, #user_view .gutter .levels .level_button > a:hover, #subscriptions_levels_view .levels .level_button > a:hover
+	#user_view .user_header .user_actions a.user_subscribe:hover, #user_view .gutter .levels .level_button > a:hover, #subscriptions_levels_view .levels .level_button > a:hover, #video_view .video_subscribe .btn:hover
 	{
 		opacity: 1 !important;
 		background-color: transparent !important;		
@@ -429,7 +429,7 @@
 	{
 		background-color: var(--main-background) !important;
 	}
-	.dropdown-menu .divider
+	.dropdown-menu .divider, .comments_list .comment_spam
 	{
 		background-color: var(--hover-background) !important;
 	}
@@ -485,6 +485,11 @@
 	{
 		opacity: 1 !important;
 	}	
+	/*Heart icon*/
+	.comments_list .comment-subscriber > .self > .inner > .comment_inner > .comment_meta > .comment_author_username::after
+	{
+		filter: grayscale(100%) invert(100%);
+	}
 	
 	
 	/*Footer*/
@@ -1003,5 +1008,86 @@
 	.form-switch input[type="checkbox"]:checked + .form-icon
 	{
 		background-color: var(--main-color) !important;
+	}
+	
+	
+	/*Messages*/
+	.messages-fragment, ul.threads > li.active-thread
+	{
+		background-color: var(--second-background) !important;
+		border-color: var(--hover-background) !important;
+	}
+	ul.threads, #messages .thread-header, .message-composer, .message-composer-submit
+	{
+		border-color: var(--hover-background) !important;
+	}
+	#messages .thread-headline, ul.threads .message-users
+	{
+		color: var(--main-text) !important;
+	}
+	li.message .message-text, ul.threads .message .message-text, #messages .thread-header a, .message-composer > textarea
+	{
+		color: var(--dimer-text) !important;
+	}
+	li.message .message-author a, #messages .thread-header a:hover, #messages .thread-header a:hover .fa
+	{
+		color: var(--main-color) !important;
+	}
+	.btn-success, .btn-success:hover, .btn-success:active, .btn-success:focus, .btn-success.disabled
+	{
+		background-color: var(--main-color) !important;
+		opacity: .9;
+	}
+	.btn-success:hover, .btn-success:hover, .btn-success:active:hover, .btn-success:focus:hover, .btn-success.disabled:hover
+	{
+		opacity: 1;
+	}
+	
+	
+	/*About vidme and such*/
+	.about-body
+	{
+		background-color: var(--second-background) !important;
+	}
+	.about-wrapper h2, .about-body ol li strong, label, .about-body b
+	{
+		color: var(--main-text) !important;
+	}
+	.about-body p, .about-body ol, .about-body ul.bulleted, .about-body .table, .pg-help-widgets .widget_follow_code textarea, .alert-info
+	{
+		color: var(--dimer-text) !important;
+	}
+	p.answer:nth-child(4) > a, p.question > a, p.answer > a, .about-body > ol > li > a, .about-body > p > a, ul.answer > li > a, div.brand-logos > div > span > a
+	{
+		color: var(--main-color) !important;
+		opacity: .9;
+	}
+	p.answer:nth-child(4) > a:hover, p.question > a:hover, p.answer > a:hover, .about-body > ol > li > a:hover, .about-body > p > a:hover, ul.answer > li > a:hover, div.brand-logos > div > span > a:hover
+	{
+		opacity: 1;
+	}	
+	ul.answer:nth-child(3) > li:nth-child(11) > span:nth-child(1)
+	{
+		filter: grayscale(100%) !important;
+	}
+	.btn-info
+	{
+		background-color: transparent !important;
+	}
+	#earn .capture-email .input-wrapper
+	{
+		background-color: var(--hover-background) !important;
+	}
+	.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td, .pg-help-widgets .widget_follow_code textarea
+	{
+		border-color: var(--hover-background) !important;
+	}	
+	.user_follow_button
+	{
+		background-color: transparent !important;
+	}
+	.vidme-widget > iframe:nth-child(1)
+	{
+		border-color: transparent !important;
 	}
 }
