--- a/VidmeDeepDark.css
+++ b/VidmeDeepDark.css
@@ -2,7 +2,7 @@
 
 @-moz-document domain("vid.me") {
 /*Theme made by RaitaroH @https://github.com/RaitaroH/Vidme-DeepDark*/
-/*1.1.2*/
+/*1.1.3*/
 	
   /*Main color variables*/
 	:root
@@ -413,6 +413,10 @@
 	.video_likes > ul .more a:hover
 	{
 		color: var(--main-color) !important;
+	}
+	.comments_list .comment_vote .comment_upvote.active *, .comments_list .comment_vote li a
+	{
+		color: var(--dimer-text);
 	}
 	
 	
