--- a/VidmeDeepDark.css
+++ b/VidmeDeepDark.css
@@ -1,8 +1,10 @@
 @-moz-document domain("vid.me") {
-/*Theme made by RaitaroH @https://github.com/RaitaroH/Vidme-DeepDark*/
-/*1.1.8*/
 	
-  /*Main color variables*/
+/*Theme made by RaitaroH @https://github.com/RaitaroH/Vidme-DeepDark*/
+	
+/*1.1.9*/
+	
+	/*Main color variables*/
 	:root
 	{
 		/*User colors*/
@@ -91,6 +93,16 @@
 		--hover-background: #404040;
 		--main-text: #FFFFFF;
 		--dimer-text: #D5DADA;
+		*/
+		
+		/*9anime colors*/
+		/*
+		--main-color: #723f8c;
+		--main-background: #0B0A0D;
+		--second-background: #17151C;
+		--hover-background: #1E1C25;
+		--main-text: #B4B4B4;
+		--dimer-text: #747474;
 		*/
 	}
 	
