--- a/VidmeDeepDark.user.css
+++ b/VidmeDeepDark.user.css
@@ -4,7 +4,7 @@
 @homepageURL https://github.com/RaitaroH/Vidme-DeepDark
 @version 1.2.4
 @updateURL https://rawgit.com/RaitaroH/Vidme-DeepDark/master/VidmeDeepDark.user.css
-@description Vidme dark theme (sad to see vidme being suspended)
+@description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (Vid.me dark theme) 
 @author RaitaroH
 @license GNU-V3.0
 
